--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,11 +1,11 @@
 .page-header {
-    background-color: #ff9400;
+    background-color: #ffff00;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
-    color: #ffffff;
+    color: #808000;
     font-size: 36pt;
     text-decoration: none;
 }
@@ -31,7 +31,7 @@ h1, h2, h3, h4 {
 }
 
 .top-menu, .top-menu:hover, .top-menu:visited {
-    color: #ffffff;
+    color: #808000;
     float: right;
     font-size: 26pt;
     margin-right: 20px;
