--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,5 +1,5 @@
 .page-header {
-    background-color: #ffff00;
+    background-color: #ffff00; /*color changed*/
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
